styling af karrusel (forside) (ikke funktionel endnu)

--- a/index.html
+++ b/index.html
@@ -166,23 +166,18 @@
 
 <!-- Instagram karrusel -->
 
-<div class="karrusel">
+<div class="karrusel-box">
     <h3>Følg os for tips og gode råd</h3>
-    <div class="slider"><img src="img/insta7.png" alt="indslag fra instragram"></div>
-    <div class="slider"><img src="img/insta2.png" alt="indslag fra instragram"></div>
-    <div class="slider"><img src="img/insta3.png" alt="indslag fra instragram"></div>
-    <div class="slider"><img src="img/insta4.png" alt="indslag fra instragram"></div>
-    <div class="slider"><img src="img/insta5.png" alt="indslag fra instragram"></div>
-    <div class="slider"><img src="img/insta6.png" alt="indslag fra instragram"></div>
-    <div class="slider"><img src="img/insta1.png" alt="indslag fra instragram"></div>
+        <div class="karrusel">
+            <div class="slider"><img src="img/insta7.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta2.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta3.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta4.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta5.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta6.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta1.png" alt="indslag fra instragram"></div>
+        </div>
 </div>
-
-
-
-
-
-
-
 
     <a class="pilop" href="#tiltop"> <img class="pilopimg" src="img/pil op.png" alt="Pil til toppen"></a>
     </main>
