Styling af forsiden

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <a href="storytelling.html" class="knap">Læs om storytelling</a>
         </article>
         <div class="hero-img imgtop">
-            <img  src="img/illustration - forside (ledning anden side).png" alt="Illustration af computer og tegnepad">
+            <img  src="img/illustration - forside (ledning anden side).png" alt="Illustration af computer og tegnepad" class="illforside">
         </div>
     </div>
     
@@ -72,20 +72,16 @@
         <h2>Brand dit håndværk med storytelling</h2>
             <p>Hos Story Media har vi fokus på storytelling og det er der en god grund til. Mennesker elsker en god historie, der aktiverer deres følelsesregister og forestillingsevner.</p>
 
-        <h3>Et studie viser, at kun 5% husker fakta og statistik, mens hele</h3> <h3 class="orange">60% husker en fortælling.</h3>
+        <h3>Et studie viser, at kun 5% husker fakta og statistik, mens hele <span class="orange">60% husker en fortælling.</span></h3>
 
-        <p>Gennem</p>
-        <p class="fed-orange">storytelling</p>
-        <p>om din virksomhed skaber vi:</p>
+        <p>Gennem <span class="fed-orange">storytelling</span> om din virksomhed skaber vi:</p>
 
         <ul>
             <li>autentisk og relaterbart content i øjenhøjde</li>
             <li>og dermed en relation mellem dit brand og din kunde</li>
         </ul>
 
-        <p>Og</p>
-        <p class="fed-orange">gevinsten</p>
-        <p>er blandt andet:</p>
+        <p>Og <span class="fed-orange">gevinsten</span> er blandt andet:</p>
 
         <ul>
             <li>Du skiller dig ud</li>
@@ -100,10 +96,10 @@
 
     <!--tekst og billede sektioner-->
     <section class="text-img-section">
-        <div class="foto">
+        <div class="foto2">
             <img src="img/forside - ler.png" alt="En person der arbejder med ler">
         </div>
-        <div class="txt">
+        <div class="txt2">
             <h2>Storytelling</h2>
             <p>Vi er specialister i storytelling.</p>  
 
@@ -116,7 +112,7 @@
     </section>
 
     <section class="text-img-section">
-        <div class="txt">
+        <div class="content txt">
             <h2>branding proces</h2>
             <p>Vi gør os umage. </p>  
 
@@ -126,17 +122,17 @@
 
             <a class="knap" href="branding-proces.html">Gå til brandingproces</a>
         </div>
-        <div class="foto">
+        <div class="content foto">
             <img src="img/forside - smykker.png" alt="Person der sidder og laver en ring">
         </div>
     </section>
 
     <section class="text-img-section">
-        <div class="foto">
+        <div class="foto2">
             <img src="img/forside - blomst.png" alt="">
         </div>
-        <div class="txt">
-            <h2>Vi tilbyder</h2>
+        <div class="txt2">
+            <h2 class="vi-tilbyder">Vi tilbyder</h2>
             <h3>Visuel identitet</h3>
             <h3>Hjemmeside</h3>
             <h3>Visitkort</h3>
@@ -149,7 +145,7 @@
     </section>
 
     <section class="text-img-section">
-        <div class="txt">
+        <div class="content txt">
             <h2>Vi er story media</h2>
             <p>Når du bestiller en ydelse gennem Story Media er det Elisabeth og Maja, du kommer til at møde. </p>  
 
@@ -159,7 +155,7 @@
 
             <a class="knap" href="om-story-media.html">Læs vores historie</a>
         </div>
-        <div class="foto">
+        <div class="logo-foto">
             <img src="img/Logo - ikon.png" alt="Story Medias logo ikon">
         </div>
     </section>
