--- a/ydelser.html
+++ b/ydelser.html
@@ -79,7 +79,7 @@
         <!--visuelle pakker-->
         <div class="vispakker-container">
             <article class="vis-et">
-                <h2 class="h2vispakker">Den "lille"</h2>
+                <h2>Den "lille"</h2>
                 <p class="p-opacity-pakker">Visuelle identitet</p>
                 <ul>
                     <li><h3>Moodboard</h3></li>
@@ -89,13 +89,13 @@
                     <li><h3>Typografi</h3></li>
                 </ul>
                 <div class="kontakt-visuel-container">
-                    <p class="pvispris">Pris: 3.650,- ex moms</p>
+                    <p>Pris: 3.650,- ex moms</p>
                     <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
                 </div>
             </article>
 
             <article class="vis-to">
-                <h2 class="h2vispakker">Den "store"</h2>
+                <h2>Den "store"</h2>
                 <p class="p-opacity-pakker">Visuelle identitet</p>
                 <ul>
                     <li><h3>Kreativ brainstorm</h3></li>
@@ -108,7 +108,7 @@
                     <li><h3>Visitkort / plakat</h3></li>
                 </ul>
                 <div class="kontakt-visuel-container">
-                    <p class="pvispris">Pris: 5.850,- ex moms</p>
+                    <p>Pris: 5.850,- ex moms</p>
                     <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
                 </div>
             </article>
