Styling af ydelser.html

--- a/ydelser.html
+++ b/ydelser.html
@@ -109,7 +109,7 @@
                 </ul>
                 <div class="kontakt-visuel-container">
                     <p>Pris: 5.850,- ex moms</p>
-                    <a class="kontaktvisuel" href="kontakt.html">Kontakt</a>
+                    <a href="kontakt.html">Kontakt</a>
                 </div>
             </article>
         </div>
@@ -124,12 +124,12 @@
         <div class="orangebaggrundydelser"></div>
         
         <div class="hjemmesidekasse-container">
-            <section class="hjemmesidekasse">
+            <section>
                 <div class="centrerhjemmeside">
-                    <h2 class="h2vispakker">Lille</h2>
-                    <p class="p-opacity-pakker">Hjemmeside</p>
-                    <h2 class="h2vispakker">12.500,-</h2>
-                    <p class="p-opacity-pakker">Ex. moms</p>
+                    <h2>Lille</h2>
+                    <p>Hjemmeside</p>
+                    <h2>12.500,-</h2>
+                    <p>Ex. moms</p>
                 </div>
                 <div class="linjeydelser"></div>
                 <ul>
@@ -141,12 +141,12 @@
                     <li><p>SEO optimeret</p></li>
                 </ul>
             </section>
-            <section class="hjemmesidekasse">
+            <section>
                 <div class="centrerhjemmeside">
-                    <h2 class="h2vispakker">Mellem</h2>
-                    <p class="p-opacity-pakker">Hjemmeside</p>
-                    <h2 class="h2vispakker">22.000,-</h2>
-                    <p class="p-opacity-pakker">Ex. moms</p>
+                    <h2>Mellem</h2>
+                    <p>Hjemmeside</p>
+                    <h2>22.000,-</h2>
+                    <p>Ex. moms</p>
                 </div>
                 <div class="linjeydelser"></div>
                 <ul>
@@ -159,12 +159,12 @@
                     <li><p>1 måneds support (opdatering af hjemmeside)</p></li>
                 </ul>
             </section>
-            <section class="hjemmesidekasse">
+            <section>
                 <div class="centrerhjemmeside">
-                    <h2 class="h2vispakker">Stor</h2>
-                    <p class="p-opacity-pakker">Hjemmeside</p>
-                    <h2 class="h2vispakker">28.000,-</h2>
-                    <p class="p-opacity-pakker">Ex. moms</p>
+                    <h2>Stor</h2>
+                    <p>Hjemmeside</p>
+                    <h2>28.000,-</h2>
+                    <p>Ex. moms</p>
                 </div>
                 <div class="linjeydelser"></div>
                 <ul>
@@ -184,7 +184,7 @@
         <!--Den specifikke-->
 
         <div  class="specifikke">
-            <article class="specifiktekst">
+            <article>
                 <h2>Den specifikke</h2>
                 <p>Har du kun brug for hjælp til specifikke opgaver, er det også en mulighed. Vi har listet nogle af de dele op, som vi ved, der er brug for. </p>
                 <p class="specafstand">Listen er ikke udtømmende - du er velkommen til at kontakte os med lige præcis dit behov.</p>
