Rettelser i styling af Storytelling.html

--- a/branding-proces.html
+++ b/branding-proces.html
@@ -65,7 +65,7 @@
         <!--Hovedindhold-->
        
         <div class="branding-container-venstre">
-            <section class="branding-tekst-bokse-venstre" >
+            <section>
                 <h3>Hvad gør din virksomhed unik?</h3>
                 <p>Vi analyserer og laver research</p>
                 <ul>
@@ -78,12 +78,12 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-venstre">
-                <img class="branding-kasseimg-venstre" src="img/branding proces - unik.png" alt="Kvinde med ipad">
+                <img src="img/branding proces - unik.png" alt="Kvinde med ipad">
             </div>
         </div>
 
         <div class="branding-container-hojre">
-            <section class="branding-tekst-bokse-hojre">
+            <section>
                 <h3>Hvem er den perfekte kunde?</h3>
                 <p>Vi finder din perfekte kunde, så du kan målrette din markedsføring</p>
                 <ul>
@@ -94,12 +94,12 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-hojre">
-                <img class="branding-kasseimg-hojre" src="img/branding proces - kunde.png" alt="Finger peger på en computerskærm">
+                <img src="img/branding proces - kunde.png" alt="Finger peger på en computerskærm">
             </div>
         </div>
 
         <div class="branding-container-venstre">
-            <section class="branding-tekst-bokse-venstre">
+            <section>
                 <h3>Visuel identitet</h3>
                 <p>Vi finder i samarbejde frem til farver og design, der giver den helt rigtige følelse af dit brand.</p>
                 <ul>
@@ -111,12 +111,12 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-venstre">
-                <img class="branding-kasseimg-venstre" src="img/branding proces - identitet.png" alt="Postkort på et bord">
+                <img src="img/branding proces - identitet.png" alt="Postkort på et bord">
             </div>
         </div>
 
         <div class="branding-container-hojre">
-            <section class="branding-tekst-bokse-hojre">
+            <section>
                 <h3>Markedsføring</h3>
                 <p>Vi sammensætter en markeds-føringsstrategi sammen med dig som både er effektiv og realistisk.</p>
                 <ul>
@@ -127,7 +127,7 @@
                 </ul>
             </section>
             <div class="branding-img-bokse-hojre">
-                <img class="branding-kasseimg-hojre" src="img/branding proces - markedsfoering.png" alt="Billede med teksten Passion led us here">
+                <img src="img/branding proces - markedsfoering.png" alt="Billede med teksten Passion led us here">
             </div>
         </div>
 
