--- a/storytelling.html
+++ b/storytelling.html
@@ -46,7 +46,7 @@
                 <p class="hero-gap-til-knap">I samarbejde med Story Media og vores brug af storytelling er hans smukke håndværk og historie blevet til et unikt udtryk i hans brand.</p>
                 <a href="kontakt.html" class="knap">Kontakt os</a>
             </article>
-            <div class="hero-img">
+            <div class="hero-img imgtop">
                 <img src="img/Wooddesignlogo.png" alt="Wood design logo">
             </div>
         </div>
@@ -75,7 +75,7 @@
        <article class="hvorfor-storytelling">
             <h2>hvorfor storytelling</h2>
             <p>Når vi med storytelling fortæller om mennesket bag virksomheden, forbinder kunden sig til dit brand på et emotionelt plan. Det styrker dine kunderelationer og betyder i sidste ende større konvertering.</p>
-            <p>Med storytelling får du </p>
+            <h4>Med <strong>storytelling</strong> får du: </h4>
             <ul>
                 <li><strong>Øget troværdighed</strong> overfor dine kunder og dermed tillid til, at dine produkter kan tilfredsstille et behov.</li>
                 <li><strong>Øget brandawareness</strong> fordi du skiller dig ud og giver dit brand værdi.</li>
@@ -90,8 +90,8 @@
             <p>Mads kom til Story Media med ønsket om at brande sig selv med storytelling. Få et indblik i vores samarbejde i casebeskrivelsen herunder.</p>
        </article>
 
-        <div class="storytekstbillede">
-            <article>
+        <section class="case-wrapper">
+            <article class="tekst-venstre">
                 <p>Drømmen</p>
                 <h2>Vaser i træ</h2>
                 <p>Mads kontaktede Story Media med ønsket om at gøre alvor af hans drøm om, at kunne leve af hans hobby som trædrejer. </p>
@@ -99,12 +99,11 @@
                 <p>Mads drejer vaser og skåle til hjemmet. Han bruger udelukkende nordiske træsorter og køber bæredygtigt træ.</p>
                 <p>“Min morfar snittede små træfigurer i hans fritid. Jeg var dybt fascineret af det, han kunne. Så ofte det var muligt, cyklede jeg ud til hans lille værksted efter skole” - Mads</p>
             </article>
-            <img src="img/Wooddesigntræ.png" alt="Bøgetræ">
-         </div>
-        
+                <img class="billede-hojre" src="img/Wooddesigntræ.png" alt="Bøgetræ">
+        </section>
 
-        <div class="storytekstbillede">
-            <article class="storytekst beigeborder">
+        <section class="case-wrapper">
+            <article class="billede-venstre">
                 <h4 class="wooddesignoverskrift">Wood Design</h4>
                 <ul>
                     <li><p>Unikt håndværk</p></li>
@@ -116,81 +115,81 @@
                     <li><p>Kan specialfremstilles</p></li>
                 </ul>
             </article>
-            <article class="storytekst beigekasse">
+            <article class="tekst-hojre beigekasse">
                 <h2>Historien begynder</h2>
                 <p>Det vigtigste på starten af Mads´ rejse som iværksætter var at blive skarp på hans hobby som virksomhed.</p>
                 <p>Spørgsmål som “hvad gør din virksomhed unik”, “hvilke konkurrenter eksisterer på markedet”, “hvorfor skal kunderne vælge at købe hos dig” med flere, er essentielle at starte med.</p>
                 <p>Vi tog derfor Mads med på rejse gennem analyse og research i den branche hans håndværk tilhører. </p>
             </article>
-        </div>
+        </section>
 
-        <div class="storytekstbillede">
-        <img src="img/Wooddesignvase.png" alt="Trævase">
-            <article class="storytekst">
+       <section class="case-wrapper">
+            <img class="billede-venstre" src="img/Wooddesignvase.png" alt="Trævase">
+            <article class="tekst-hojre">
                 <h2>Salg fra værkstedet</h2>
                 <p>Mads sælger hans færdige vaser og skåle fra hans hobbyværksted. Han har aldrig møblerne til salg. Alt sælges fra mund til mund. </p>
                 <p>“Der har været stor interesse for mine træting fra starten. Jeg var så heldig at sælge min første vase til en familierelation med et stort netværk. Og siden den dag har jeg haft flere forespørgsler” - Mads</p>
                 <p>Den stigende efterspørgsel var grunden til at Mads turde satse på at gå selvstændig.</p>
                 <p>“Jeg ved dog også godt, at hvis jeg skal leve af mit håndværk, så skal jeg ud og finde flere kunder. Og her har jeg brug for hjælp.” - Mads</p>
             </article>
-         </div>
+        </section>
 
-        <div class="storytekstbillede">
-        <article class="storytekst beigekasse">
-            <h2>Den perfekte kunde</h2>
-            <p>Ingen sælger til alle - men alle har en kunde. For Mads var det vigtigt at forstå sin kunde, for fremadrettet at kunne målrette sin markedsføring.</p>
-            <p>Mads´ færdige varer ikke er helt billige. Derfor rammer han en kundegruppe der i store træk har en god økonomi, går op i indretning og som værdsætter naturlige materialer og unikt håndværk. </p>
-        </article>
-        <img class="beigeborder" src="img/illustration - kunde3.png" alt="Illustration af en kunde">
-        </div>
+        <section class="case-wrapper">
+            <article class="tekst-venstre beigekasse">
+                <h2>Den perfekte kunde</h2>
+                <p>Ingen sælger til alle - men alle har en kunde. For Mads var det vigtigt at forstå sin kunde, for fremadrettet at kunne målrette sin markedsføring.</p>
+                <p>Mads´ færdige varer ikke er helt billige. Derfor rammer han en kundegruppe der i store træk har en god økonomi, går op i indretning og som værdsætter naturlige materialer og unikt håndværk. </p>
+            </article>
+            <img class="billede-hojre" class="beigeborder" src="img/illustration - kunde3.png" alt="Illustration af en kunde">
+        </section>
 
-        <div class="storytekstbillede">
-            <img src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
-            <article class="storytekst">
+        <section class="case-wrapper">
+            <img class="billede-venstre" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
+            <article class="tekst-hojre">
                 <h2>Tilbage til naturen</h2>
                 <p>For Mads er der en masse følelser forbundet med hans håndværk. Barndomsminderne er en stor del af det, desuden hans store glæde for naturen og ikke mindst hans passion for at arbejde med træ. </p>
                 <p>“Den følelse jeg ønsker at give af mit brand, er at få et stykke natur ind i indretningen. Et stykke natur med sin egen historie. </p>
                 <p>Der er lige nu en tendens, hvor mennesker søger tilbage til den ro og skønhed naturen giver. Den oplevelse vil jeg gerne være med til at bringe ind i hjemmet med mine vaser” - Mads</p>
             </article>
-        </div>
+        </section>
 
-        <div class="storytekstbillede">
-            <article class="storytekst beigekasse">
+        <section class="case-wrapper">
+            <article class="tekst-venstre beigekasse">
                 <h2>Logo og farvepalette</h2>
                 <p>Med udgangspunkt i Mads´ drøm, barndomsminder og glæde for naturen, skabte vi et logo og en farvepalette, som henleder tankerne til skoven og årstidens farver. </p>
                 <p>Farver er fuld af symbolik og med de brune og grønne nuancer, fanger paletten følelsen af stabilitet og tryghed, samt vækst, fornyelse og bæredygtighed. </p>
                 <p>Logo´et er simpelt og man fornemmer, at det handler om træ og natur.</p>
             </article>
-            <div class="beigeborder">
+            <div class="billede-hojre">
                 <img src="img/Wooddesignlogo.png" alt="Wood design logo">
                 <img src="img/Wooddesignfarver.png" alt="Wood design farver">
             </div>
-        </div>
+        </section>
 
-        <div class="storytekstbillede">
-            <img src="img/Wooddesignflerevaser.png" alt="Trævaser">
-            <article class="storytekst">
+        <section class="case-wrapper">
+            <img class="billede-venstre" src="img/Wooddesignflerevaser.png" alt="Trævaser">
+            <article class="tekst-hojre">
                 <h2>Salg og some</h2>
                 <p>Mads har en bærbar computer og en smartphone. Han bruger computeren til at researche og foretage netkøb. Smartphonen bliver anvendt primært til beskeder, opkald og en smule instagram. </p>
                 <p>Markedsføring har han aldrig arbejdet med.</p>
                 <p>“Jeg er en habil bruger af IT, men ikke mere end det. Jeg vil hellere ud i værkstedet og bruge mine hænder. </p>
                 <p>Markedsføring er en by i Rusland. Men jeg ved, at det er vigtigt, og derfor har det været essentielt for mig at vælge et bureau, der kan hjælpe mig med den del” - Mads</p>
             </article>
-        </div>
+        </section>
 
-        <div class="storytekstbillede">
-            <article class="storytekst beigekasse">
+        <section class="case-wrapper">
+            <article class="tekst-venstre beigekasse">
                 <h2>Markedsføring og strategi</h2>
                 <p>Med mindre man arbejder med digital markedsføring, så er det meget få iværksættere, der både har tid og viden om markedsføring. </p>
                 <p>Til Mads fik vi lavet en SEO-optimeret og responsiv hjemmeside, digitale bannere, visitkort og skabeloner til Instagram. Altsammen pakket ind i en markedsføringsstrategi for det første år. </p>
                 <p>Fordi Story Media var med fra start til slutprodukt, var vi i stand til at skabe en sammenhængende visuel identitet med fokus på den følelse, Mads gerne vil have sit brand til at ose af.</p>
                 <p>Vores rejse med Mads blev ved i nogle måneder efter, hvor vi ydede fuld support til hans løsninger. Det sikrede ham den bedste digitale start på hans iværksætterdrøm.</p>
             </article>
-            <div class="beigeborder">
+            <div class="billede-hojre">
                 <img src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
                 <p>Storytelling er et unikt fingeraftryk</p>
             </div>
-        </div>
+        </section>
 
         <article class="nysgerrigstory">
         <h2>Nysgerrig på storytelling?</h2>
