--- a/storytelling.html
+++ b/storytelling.html
@@ -103,7 +103,7 @@
         </section>
 
         <section class="case-wrapper">
-            <article class="billede-venstre">
+            <article class="beigeborder grid-justering">
                 <h4 class="wooddesignoverskrift">Wood Design</h4>
                 <ul>
                     <li><p>Unikt håndværk</p></li>
@@ -140,11 +140,11 @@
                 <p>Ingen sælger til alle - men alle har en kunde. For Mads var det vigtigt at forstå sin kunde, for fremadrettet at kunne målrette sin markedsføring.</p>
                 <p>Mads´ færdige varer ikke er helt billige. Derfor rammer han en kundegruppe der i store træk har en god økonomi, går op i indretning og som værdsætter naturlige materialer og unikt håndværk. </p>
             </article>
-            <img class="billede-hojre" class="beigeborder" src="img/illustration - kunde3.png" alt="Illustration af en kunde">
+            <img class="billede-hojre beigeborder illu-grid" class="beigeborder" src="img/illustration - kunde3.png" alt="Illustration af en kunde">
         </section>
 
         <section class="case-wrapper">
-            <img class="billede-venstre" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
+            <img class="billede-venstre img-just" src="img/Wooddesigntræoverflade.png" alt="Billede af træbark">
             <article class="tekst-hojre">
                 <h2>Tilbage til naturen</h2>
                 <p>For Mads er der en masse følelser forbundet med hans håndværk. Barndomsminderne er en stor del af det, desuden hans store glæde for naturen og ikke mindst hans passion for at arbejde med træ. </p>
@@ -160,7 +160,7 @@
                 <p>Farver er fuld af symbolik og med de brune og grønne nuancer, fanger paletten følelsen af stabilitet og tryghed, samt vækst, fornyelse og bæredygtighed. </p>
                 <p>Logo´et er simpelt og man fornemmer, at det handler om træ og natur.</p>
             </article>
-            <div class="billede-hojre">
+            <div class="billede-hojre beigeborder woodfarve">
                 <img src="img/Wooddesignlogo.png" alt="Wood design logo">
                 <img src="img/Wooddesignfarver.png" alt="Wood design farver">
             </div>
@@ -185,7 +185,7 @@
                 <p>Fordi Story Media var med fra start til slutprodukt, var vi i stand til at skabe en sammenhængende visuel identitet med fokus på den følelse, Mads gerne vil have sit brand til at ose af.</p>
                 <p>Vores rejse med Mads blev ved i nogle måneder efter, hvor vi ydede fuld support til hans løsninger. Det sikrede ham den bedste digitale start på hans iværksætterdrøm.</p>
             </article>
-            <div class="billede-hojre">
+            <div class="billede-hojre beigeborder woodfarve">
                 <img src="img/Wooddesignfingeraftryk.png" alt="Fingeraftryk">
                 <p>Storytelling er et unikt fingeraftryk</p>
             </div>
