--- a/storytelling.html
+++ b/storytelling.html
@@ -167,7 +167,7 @@
         </section>
 
         <section class="case-wrapper">
-            <img class="billede-venstre" src="img/Wooddesignflerevaser.png" alt="Trævaser">
+            <img class="billede-venstre img-just" src="img/Wooddesignflerevaser.png" alt="Trævaser">
             <article class="tekst-hojre">
                 <h2>Salg og some</h2>
                 <p>Mads har en bærbar computer og en smartphone. Han bruger computeren til at researche og foretage netkøb. Smartphonen bliver anvendt primært til beskeder, opkald og en smule instagram. </p>
