styling af interne links, img rettelser

--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,8 @@
             <h2>Hvad er branding</h2>
             <p>Branding handler om, at skabe en bestemt følelse og en præference hos kunden, at være attraktiv overfor andre virksomheder og at differentiere sig. </p>
             <p>  At lave markedsføring for et kreativt håndværksprodukt er ikke branding alene. Branding er også kundeoplevelse. Lige fra kundens oplevelse på din hjemmeside, den kundeservice du tilbyder, den måde dit produkt pakkes ind på, det sprog du bruger på de sociale medier, dit farvevalg til logo, din virksomheds historie og meget mere.</p>
-            <p> Branding er alt hvad der sker i din virksomhed og alt hvad der sendes ud til omverdenen..</p>
+            <p> Branding er alt hvad der sker i din virksomhed og alt hvad der sendes ud til omverdenen.</p>
+            <p>Hos Story Media kommer du igennem en <a href="branding-proces.html" class="internlinks">branding proces</a>, hvor der er tænkt på alt. </p>
         </section>
         <section class="faq-box2" id="2">
             <h2>Hvad er brand position</h2>
