--- a/branding-proces.html
+++ b/branding-proces.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/global.css">
-    <title>Forside</title>
+    <title>Branding proces</title>
 </head>
 <body class="BGbranding">
 
