Styling af om Story Media side

--- a/index.html
+++ b/index.html
@@ -37,17 +37,18 @@
     
     <main>
        <!--hero-område-->
-       <div class="hero-container">    
-        <article class="hero-tekst">
-            <h1>dit håndværk er en unik fortælling</h1>
-            <p>Når eksperter mødes skabes magi. Lad os sammen puste liv i dit brand.</p>
-            <p class="fed">Vi fortæller din historie!</p>
-            <a href="storytelling.html" class="knap">Læs om storytelling</a>
-        </article>
-        <div class="hero-img imgtop">
-            <img  src="img/illustration - forside (ledning anden side).png" alt="Illustration af computer og tegnepad" class="illforside">
-        </div>
-    </div>
+       <section class="hero-section">
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" poster="img/illustration - forside (ledning anden side).png">
+            <source src="img/animeret baggrund 5.mp4" type="video/mp4"></video>
+        <div class="hero-overlay"></div>
+            <div class="hero-content">
+                <h1>Multimediebureau</h1>
+                    <p>Story Media skaber unikke hjemmesider, grafisk design og branding med storytelling til de virksomheder, der vil skille sig ud. </p>
+                    <p>Dit håndværk er en unik fortælling. </p>
+                    <p class="hero-gap-til-knap fed">Vi fortæller din historie!</p>
+                        <a href="storytelling.html" class="knap">Læs om Storytelling</a>
+            </div>
+        </section>
     
     <!--Chevron-->
     <div class="chevron-container">
@@ -166,12 +167,12 @@
     <h3>Følg os for tips og gode råd</h3>
         <div class="karrusel">
             <div class="slider"><img src="img/insta7.png" alt="indslag fra instragram"></div>
-            <div class="slider"><img src="img/insta2.png" alt="indslag fra instragram"></div>
             <div class="slider"><img src="img/insta3.png" alt="indslag fra instragram"></div>
             <div class="slider"><img src="img/insta4.png" alt="indslag fra instragram"></div>
             <div class="slider"><img src="img/insta5.png" alt="indslag fra instragram"></div>
             <div class="slider"><img src="img/insta6.png" alt="indslag fra instragram"></div>
             <div class="slider"><img src="img/insta1.png" alt="indslag fra instragram"></div>
+            <div class="slider"><img src="img/insta2.png" alt="indslag fra instragram"></div>
         </div>
 </div>
 
