--- a/om-story-media.html
+++ b/om-story-media.html
@@ -60,7 +60,88 @@
         <img src="img/Chat funktion.png" alt="chat med Story Media">
     </div>
     
+<!-- billede præsentation -->
 
+    <div class="overlay">
+        <div class="img-os">
+            <div>
+                <img src="img/Elisabeth.png" alt="Grundlægger af Story Media, Elisabeth">
+                <h2>Elisabeth</h2>
+            </div>
+            <div>
+                <img src="img/maja.png" alt="Grundlægger af Story Media, Maja">
+                <h2>Maja</h2>
+            </div>
+        </div>
+            <img src="img/omos-streg.png" alt="stiblet linje der pynter siden" class="streg-fyld">
+    </div>
+
+<!-- hovedindhold-->
+    <section class="info-os">
+        <h2>Hvem er vi</h2>
+        <p>Vi er Elisabeth og Maja - begge vokset op med fødderne i den jydske muld. Hvis du leder efter et jordnært multimediebureau, læser du med det helt rigtige sted. </p>
+        <p>Som børn er flest har vi begge haft mange kreative interesser op igennem barndommen. Kreativiteten har holdt ved og <a href="index.html" class="internlinks">Story Media</a> er i dag et resultat af ønsket om at holde fast i en hverdag med masser af kreativitet og ekspertviden indenfor hjemmesidedesign.</p>
+        <p>Der skulle gå nogle år, før vi mødtes på multimediedesigneruddannelsen. Vi har andre uddannelser med i bagagen, som har givet os et solidt fundament at bygge på og kompetencer indenfor andre områder, som i dag er et plus i vores hverdag med egen virksomhed. </p>
+    </section>
+
+<!--billede + kasse m. border-->
+    <section class="iveark-os">
+            <img src="img/Omosmidtbillede.png" alt="Flotte flettede kurve" class="iveark-os-img">
+        <article class="iveark-os-txt">
+            <h2>iværksættere & kreativt håndværk</h2>
+            <p>Vi kender begge til skaberlysten og til ønsket om friheden til at tilrettelægge indhold og rammer omkring vores arbejde. </p>
+            <p>I en iværksætteranalyse fra organisationen Danske Iværksættere svarer 62%,, at skaberlysten er den primære inspiration til at blive iværksætter og 69% svarer at friheden til at tilrettelægge indholdet i arbejdet er afgørende for beslutningen.</p>
+            <p>Det falder fuldstændig i tråd med vores egne livsstilsværdier og derfor mener vi, at netop målgruppen “iværksættere med et kreativt håndværk” er de kunder, hvor vi forstår branding behovet og kan gøre en forskel i rejsen med deres virksomhed.</p>
+            <p>Vi har fundet vores kald i den digitale kreative verden. Og det var på et online studie ved IBA Erhvervsakademi i Kolding, at vores fælles rejse startede.</p>
+        </article>
+    </section>
+
+    <section class="special">
+        <h3>IBA Erhvervsakademi</h3>
+        <h2>Multimediedesign</h2>
+        <img src="img/omos-flyver.png" alt="illustration af vi flyver i hver vores retning">
+            <div class="beige-box1"></div>
+                <div class="beige-box">
+                    <h2>Specialisering</h2>
+                    <p>Efter multimediedesign uddannelsen landede Elisabeth et design job hos Grobowski, et passioneret design- og kommunikations bureau, der med krøllede hjerner og dedikation inspirerer mennesker.</p>
+                    <p>Udover det nye spændende job har Elisabeth fokuseret på en af hendes passioner, nemlig fotografering. Hun har taget kurser i foto- og videografi for at udvikle hendes evner. </p>
+                </div>
+                <div class="beige-box">
+                    <h2>Specialisering</h2>
+                    <p>Multimedieuddannelsen var for Maja springbrættet til en bachelor i webudvikling. </p>
+                    <p>Hun har derefter arbejdet freelance med kodning og design af hjemmesider til iværksættere fra mange forskellige brancher. </p>
+                    <p>Den faglige læring har derfor været kombineret med viden omkring iværksætterens behov for branding. </p>
+                </div>
+            </div>
+    </section>
+
+    <div class="startup-omos">
+        <img src="img/Start up.png" alt="*Start up*" class="startup-os-img">
+        <img src="img/omos-streg1.png" alt="stiblet linje der pynter siden" class="stregen-fyld">
+    </div>
+
+    <section class="ourstory">
+        <div class="story-os">
+            <img src="img/Logo - ikon+tekst på linje.png" alt="Story Media Logo">
+            <p>3 år efter multimedieuddannelsen fandt Elisabeth og Maja sammen og startede Story Media op med ønsket om at hjælpe kreative iværksættere at få brandet deres drøm.</p>
+            <p>Story Media er baseret på unik <a href="storytelling.html" class="internlinks">storytelling</a>. Når man er iværksætter med et håndværk, udspringer det altid af en passion. Og den passion har en historie.</p>
+            <p class="hero-gap-til-knap">Historien er vigtig for at forstå den værdi håndværket repræsenterer. Derfor er storytelling vores go to. Den skaber den røde tråd fra mennesket bag til produktet på hylden. </p>
+
+                <a href="kontakt.html" class="knap">Kontakt os</a>
+        </div>
+        <div class="veardi">
+            <h2>Værdisæt</h2>
+            <ul>
+                <li><h4>troværdighed</h4></li>
+                <li><h4>specialiseret</h4></li>
+                <li><h4>relationsskabende</h4></li>
+                <li><h4>engageret</h4></li>
+                <li><h4>Opdateret</h4></li>
+                <li><h4>skabertrang</h4></li>
+                <li><h4>kreativitet</h4></li>
+            </ul>
+        </div>
+    </section>
 
     <a class="pilop" href="#tiltop"> <img class="pilopimg" src="img/pil op.png" alt="Pil til toppen"></a>
     </main>
