--- a/om-story-media.html
+++ b/om-story-media.html
@@ -100,7 +100,7 @@
         <h3>IBA Erhvervsakademi</h3>
         <h2>Multimediedesign</h2>
         <img src="img/omos-flyver.png" alt="illustration af vi flyver i hver vores retning">
-            <div class="beige-box1"></div>
+            <div class="beige-box1">
                 <div class="beige-box">
                     <h2>Specialisering</h2>
                     <p>Efter multimediedesign uddannelsen landede Elisabeth et design job hos Grobowski, et passioneret design- og kommunikations bureau, der med krøllede hjerner og dedikation inspirerer mennesker.</p>
@@ -120,13 +120,12 @@
         <img src="img/omos-streg1.png" alt="stiblet linje der pynter siden" class="stregen-fyld">
     </div>
 
-    <section class="ourstory">
-        <div class="story-os">
+    <section class="omos-sektion">
+        <div class="omos-logo-txt">
             <img src="img/Logo - ikon+tekst på linje.png" alt="Story Media Logo">
             <p>3 år efter multimedieuddannelsen fandt Elisabeth og Maja sammen og startede Story Media op med ønsket om at hjælpe kreative iværksættere at få brandet deres drøm.</p>
             <p>Story Media er baseret på unik <a href="storytelling.html" class="internlinks">storytelling</a>. Når man er iværksætter med et håndværk, udspringer det altid af en passion. Og den passion har en historie.</p>
             <p class="hero-gap-til-knap">Historien er vigtig for at forstå den værdi håndværket repræsenterer. Derfor er storytelling vores go to. Den skaber den røde tråd fra mennesket bag til produktet på hylden. </p>
-
                 <a href="kontakt.html" class="knap">Kontakt os</a>
         </div>
         <div class="veardi">
